# example

./: .pre-commit-config.yaml  README.md  pyproject.toml  Регламент.md
app/: consts.py
app/outsource/flows/: translate_flow.py
app/outsource/llm/: llm_client.py  llm_types.py
demonstration/: main.py
demonstration/data/: text_for_translate.md
eksmo_src/: eksmo_types.py  precheck.py
