[project]
name = "outsource"
version = "1.0.0"
description = ""
authors = []
requires-python = ">=3.13"

dependencies = [
    "pydantic==2.11.7",
    "loguru==0.7.3",
    "openai==2.8.0",
    "pre-commit==4.1.0",
    # Сюда аналогично другие модули
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.10",
    "mypy==1.13.0",
    "pre-commit==4.1.0",
    "gitlint==0.17.0",
]

[tool.setuptools]
packages = ["app"]

[tool.mypy]
python_version = 3.13
plugins = "pydantic.mypy"
follow_imports = "silent"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiofiles"
ignore_missing_imports = true

[tool.ruff]
lint.select = ["E", "W", "I", "N", "F", "UP", "T20", "SIM", "B", "ASYNC", "G", "DTZ", "D", "RUF", "ANN"]
lint.ignore = [
    "ANN002", "ANN003", "ANN401",
    "D100", "D101", "D104", "D105", "D106", "D107", "D202",
    "N805", "B008",
    "RUF001", "RUF002", "RUF003", "RUF012"
]
lint.extend-select = ["B006", "PIE794"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache", ".nox", ".pants.d",
    ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out",
    "build", "dist", "node_modules", "venv", ".venv", "env",  "eksmo_src",
]
line-length = 100
target-version = "py313"


[tool.ruff.lint.isort]
force-wrap-aliases = true
force-single-line = true
combine-as-imports = false
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pydoclint]
style = "google"

# === Проверка параметров ===
check-params = true               # Все аргументы должны быть в Args
require-return = true             # Требовать Returns, если return-annotation не None
require-param-type = false        # Не требовать типы в Args (как darglint)
arg-type-hints-in-docstring = false

# === Проверка Returns ===
check-return = true               # Проверяет соответствие Returns сигнатуре
ignore-return-section = false     # Требовать наличие Returns, запрещает пустую секцию

# === Проверка Raises ===
check-raises = true               # Требовать Raises (если функция действительно может кидать)

# === Поведение, похожее на darglint ===
allow-init-docstring = true       # Разрешить короткие докстринги у __init__
ignore-private = false            # Проверять _приватные методы тоже
ignore-magic = false              # Проверять __magic__ методы
skip-checking-short-docstrings = false  # Не пропускать однострочные докстринги